[package]
name = "valori-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
valori-core = { workspace = true }
blake3 = { version = "1.5", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["serde", "alloc"] }
thiserror = { version = "2.0", default-features = false }
byteorder = { version = "1.5", default-features = false }
memmap2 = { version = "0.9.11", optional = true }
rustc-hash = { version = "2.1.1", default-features = false, optional = true }

[features]
default = ["std"]
std = ["memmap2", "thiserror/std", "rustc-hash/std", "byteorder/std", "valori-core/std"]

[dev-dependencies]
tempfile = "3"
