[package]
name = "valori-models"
version = "0.1.0"
edition = "2021"
description = "Model management subsystem for Valori — ModelProvider trait, provider registry, download+verify, storage. Used by daemon, ingest pipeline, CLI, and SDK."
license = "MIT OR Apache-2.0"

[dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "1"
sha2        = "0.10"
reqwest     = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
tokio       = { version = "1", features = ["fs", "io-util"] }
async-trait = "0.1"
tracing     = "0.1"

[dev-dependencies]
tokio  = { version = "1", features = ["full"] }
tempfile = "3"

[lints]
workspace = true
