[package]
name = "valori-node"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
valori-kernel = { workspace = true }
valori-wire = { workspace = true }
valori-consensus = { workspace = true }
openraft = { version = "0.9", features = ["serde", "storage-v2"] }
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tokio-util = { version = "0.7", features = ["io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bincode = { version = "2.0.1", features = ["serde"] }
crc32fast = "1.5.0"
blake3 = "1.5"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "stream", "rustls-tls", "charset", "http2"] }

axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"
tower-http = { version = "0.5", features = ["cors", "validate-request"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
futures = "0.3.31"
tokio-stream = "0.1.17"
opendal = { version = "0.55.0", features = ["services-s3", "services-fs"] }
bytes = "1.0"
tap = "1.0.1"
base64 = "0.22.1"
# Crypto-shredding (Phase 3.6)
aes-gcm = "0.10"
# Batch idempotency dedup (Phase 3.12)
rustc-hash = "2.1.1"

[dev-dependencies] 
tempfile = "3.23.0"
tower = { version = "0.5.2", features = ["util"] }
