[package]
name = "valori-node"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
valori-kernel  = { workspace = true, features = ["std"] }
valori-search  = { workspace = true }
valori-index   = { workspace = true }
valori-rag     = { workspace = true }
valori-ingest  = { workspace = true }
valori-models  = { workspace = true }
valori-engine  = { workspace = true }
valori-wire    = { workspace = true }
valori-storage = { workspace = true }
valori-state   = { workspace = true }
valori-consensus = { workspace = true }
valori-core     = { workspace = true, features = ["std"] }
valori-planner  = { workspace = true }
valori-effect   = { workspace = true }
valori-metadata = { workspace = true }
async-trait = "0.1"
openraft = { version = "0.9", features = ["serde", "storage-v2"] }
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tokio-util = { version = "0.7", features = ["io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bincode = { version = "2.0.1", features = ["serde"] }
crc32fast = "1.5.0"
blake3 = "1.5"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "stream", "rustls-tls", "charset", "http2"] }

axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"
tower-http = { version = "0.5", features = ["cors", "validate-request", "limit"] }
dirs = "5"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
futures = "0.3.31"
tokio-stream = "0.1.17"
opendal = { version = "0.58", features = ["services-s3", "services-fs"] }
bytes = "1.0"
tap = "1.0.1"
base64 = "0.22.1"
# Crypto-shredding (Phase 3.6)
aes-gcm = "0.10"
# Batch idempotency dedup (Phase 3.12)
rustc-hash = "2.1.1"
# Constant-time comparisons (H-1: timing-safe token check)
subtle = "2.6"
# Cross-platform CSPRNG for token generation (H-3)
getrandom = "0.2"

[dev-dependencies] 
tempfile = "3.23.0"
tower = { version = "0.5.2", features = ["util"] }
