[package]
name = "valori-planner"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Operation lifecycle and execution planning for Valori: Operation, ExecutionGraph, PlannerFingerprint, ExecutionRegistry"

[dependencies]
valori-core     = { workspace = true, features = ["std"] }
valori-metadata = { workspace = true }

blake3   = "1.5"
bincode  = { version = "2.0.1", features = ["serde"] }
serde    = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror  = "2.0"
tracing    = "0.1"
tokio      = { version = "1.0", features = ["sync"] }

[dev-dependencies]
tempfile = "3.23.0"
tokio    = { version = "1.0", features = ["sync", "rt", "macros"] }

[lints]
workspace = true
