[package]
name = "valori-rag"
version = "0.2.4"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Retrieval-Augmented Generation primitives for the Valori platform: GraphRAG, Tree-RAG, and Community Layer"
publish = false

[dependencies]
valori-kernel = { workspace = true, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
axum = "0.7"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
