[package]
name = "valori-search"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Post-retrieval search primitives for Valori: time-decay re-ranking, BM25 hybrid reranking, and metadata predicate filtering. Pure std, no kernel or node dependency."

[dependencies]
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
