[package]
name = "valori-state"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "State lifecycle for Valori: bootstrap, manifest, crash recovery, graceful shutdown"

[dependencies]
valori-core    = { workspace = true, features = ["std"] }
valori-kernel  = { workspace = true, features = ["std"] }
valori-storage = { workspace = true }

blake3    = "1.5"
bincode   = { version = "2.0.1", features = ["serde"] }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing   = "0.1"
metrics   = "0.21"

[dev-dependencies]
tempfile   = "3.23.0"
valori-verify = { workspace = true }
toml       = "0.8"
