[package]
name = "valori-wire"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Valori event-log wire format — the single on-disk contract shared by the node (writer), the offline verifier, and the forensic CLI"

# Deliberately tiny dependency set: an auditor reads this crate plus
# valori-kernel and can decode any Valori log without trusting the server.
[dependencies]
valori-kernel = { path = "../valori-kernel" }
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
blake3 = { version = "1.5", default-features = false }
thiserror = "1.0"
