# Standalone crate — deliberately NOT part of the root Cargo workspace.
# The empty [workspace] table below detaches it, and the root Cargo.toml also
# lists `desktop/src-tauri` under [workspace].exclude. Either alone is enough;
# both together guarantee `cargo build --workspace` at the repo root never
# pulls in Tauri's heavy dependency tree.
[workspace]

[package]
name = "valori-desktop"
version = "0.1.0"
description = "Valori Desktop — Tauri control plane"
edition = "2021"
rust-version = "1.77"

[lib]
# Tauri 2 builds the app as a library that the thin main.rs binary calls into.
name = "valori_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Native → daemon/node bridge. Desktop commands call the local valori-node (or,
# later, the Valori Daemon) over HTTP. rustls avoids a system OpenSSL dependency.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
chrono = "0.4"
urlencoding = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = ["NSDocumentController"] }
objc2-foundation = { version = "0.3", features = ["NSURL", "NSString"] }

[dev-dependencies]
tempfile = "3"

[features]
# Kept for parity with the default Tauri template.
custom-protocol = ["tauri/custom-protocol"]
